--- a/.env
+++ b/.env
@@ -1,4 +1,6 @@
 PORT=5001
 
+MONGO_CONECTION=mongodb+srv://admin:admin@cluster0.tr5edqa.mongodb.net/?retryWrites=true&w=majority
+
 JWT_ACCESS_SECRET=JWT_ACCESS_SECRET
 JWT_REFRESH_SECRET=JWT_REFRESH_SECRET
